--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "prepavenger",
+  "homepage": "https://jaivik1920.github.io/PrepAvenger",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,15 +13,18 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "gh-pages": "^3.2.3",
     "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
     "react-ace": "^9.4.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
