--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prepavenger",
-  "homepage": "https://jaivik1920.github.io/PrepAvenger",
+  "homepage": "https://prepavenger.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
